<resources>
    <string name="app_name">ProyectoAGACO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Salir</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lblTipoDocumento">Tipo de documento de identidad</string>
    <string name="lblDistrito">Distrito</string>
    <string name="lblProducto">Producto</string>
    <string name="lblEtNroDocumento">Nro. documento de identidad</string>
    <string name="lblEtApePaterno">Apellido paterno</string>
    <string name="lblEtApeMaterno">Apellido materno</string>
    <string name="lblEtNombres">Nombres</string>
    <string name="lblEtDireccion">Dirección</string>
    <string name="lblCbTransporte">Solicita transporte a domicilio</string>
    <string name="lblCbArmado">Solicita armado a domicilio</string>
    <string name="lblBtnFechaVenta">Seleccione fecha</string>
    <string name="lblBtnRegistrar">Registrar venta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_registro_venta">Registrar venta</string>
    <string name="menu_asignacion_operador">Asignar operador</string>
    <string name="text_signin_message">Bienvenido, acceda a su cuenta</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_sign_in">Ingresar</string>
    <string name="lblVentaNombresCliente">Cliente</string>
    <string name="lblVentaFecha">Fecha</string>
    <string name="lblVentaProducto">Producto</string>
    <string name="lblVentaDireccion">Dirección</string>
    <string name="lblBtnVentaDetalle">Ver detalle</string>
    <string name="lblEtTelefono">Teléfono</string>
    <string name="datos_cliente">Datos Cliente</string>
    <string name="valdatosventa">Datos Venta:</string>
    <string name="valDNISeg">DNI:</string>
    <string name="valAPEPATERSeg">Apellido Paterno:</string>
    <string name="valAPEMATERNOSeg">Apellido Materno:</string>
    <string name="valnombreseg">Nombres:</string>
    <string name="valtelefonoseg">Telefono:</string>
    <string name="valdireccionseg">Dirección:</string>
    <string name="valdistritoseg">Distrito:</string>
    <string name="valproductoseg">Producto:</string>
    <string name="valfechaseg">Fecha Venta:</string>
    <string name="valtransportedomseg">Transporte Domicilio</string>
    <string name="valarmadodocseg">Armado Domicilio</string>
    <string name="valdatostransporte">Datos Servicio de Transporte</string>
    <string name="valestadotransporte">Estado Servicio:</string>
    <string name="valfechatransporte">Fecha Servicio:</string>
    <string name="valtransportista">Transportista:</string>
    <string name="valdatosarmado">Datos Servicio de Armado</string>
    <string name="valestadoarmado">Estado Servicio:</string>
    <string name="valfechaarmado">Fecha Servicio:</string>
    <string name="valespecialista">Especialista:</string>
    <string name="lblBtnCancelar">Cancelar</string>
    <string name="lblBtnAsignarOperador">Asignar</string>
    <string name="tituloCerrar">Cerrar la operación</string>
    <string name="lblBtnCerrar">Cerrar</string>
</resources>